kubernetes/cnv-middleware/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: cnv-middleware-api 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cnv-middleware-api 
  template:
    metadata:
      labels:
        app: cnv-middleware-api  
    spec:
      containers:
        - name: cnv-middleware-api  
          image: europe-west3-docker.pkg.dev/conversation-opensource/cnv-platform-container/cnv-platform-middleware:0.61.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
            - containerPort: 1880
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 20
            failureThreshold: 3
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/mount"
              name: nodered-managed-disk
          resources:
            requests:
              memory: "256Mi"
              cpu: "10m"
            limits:
              memory: "1024Mi"
              cpu: "500m"

      volumes:
        - name: nodered-managed-disk
          persistentVolumeClaim:
            claimName: nodered-managed-disk-pvc
